deploy/base/share/minio-service.yaml
# Copyright 2025 The fawa Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: fawa
spec:
  ports:
    - name: http-minio
      protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio
  namespace: fawa
subsets:
  - addresses:
      - ip: 172.31.37.33
    ports:
      - name: http-minio
        port: 9000
