deploy/base/share/ingress.yaml
# Copyright 2025 The fawa Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fawa-api-ingress
  namespace: fawa
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  rules:
    - host: api.fawa.marevilspirit.com
      http:
        paths:
          - path: /greet
            pathType: Prefix
            backend:
              service:
                name: greetservice
                port:
                  number: 443
          - path: /file
            pathType: Prefix
            backend:
              service:
                name: fileservice
                port:
                  number: 443
          - path: /canvas
            pathType: Prefix
            backend:
              service:
                name: canvaservice
                port:
                  number: 443
  tls:
    - hosts:
        - api.fawa.marevilspirit.com
      secretName: fawa-api-tls
